[gd_scene load_steps=11 format=3 uid="uid://bris5qf7lrbyo"]

[ext_resource type="Script" path="res://scripts/shoppe.gd" id="1_75yer"]
[ext_resource type="Texture2D" uid="uid://b50x6ik6tvoy8" path="res://assets/images/stoneframe.png" id="2_jvnhu"]
[ext_resource type="Texture2D" uid="uid://bu0bdbw6u740q" path="res://assets/images/froggowizzo.png" id="3_5i36i"]
[ext_resource type="Texture2D" uid="uid://m06yehvlbjb6" path="res://assets/images/froggowizzo2.png" id="4_w5cv4"]
[ext_resource type="Texture2D" uid="uid://bakqhqqvvcn41" path="res://assets/images/froggowizzoty.png" id="5_evim0"]
[ext_resource type="Texture2D" uid="uid://bt6kotrxsxavw" path="res://assets/images/sillyshop.png" id="6_15wo2"]
[ext_resource type="Texture2D" uid="uid://dy511dfwq2iq1" path="res://assets/images/pot.png" id="7_owwd7"]
[ext_resource type="Script" path="res://scenes/drop_down_menu.gd" id="8_gql4k"]
[ext_resource type="Texture2D" uid="uid://cwyr2qljkmlhk" path="res://assets/images/chevron.png" id="9_517tx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dpoly"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5i36i")
}, {
"duration": 1.0,
"texture": ExtResource("4_w5cv4")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_evim0")
}, {
"duration": 1.0,
"texture": ExtResource("4_w5cv4")
}, {
"duration": 1.0,
"texture": ExtResource("5_evim0")
}, {
"duration": 1.0,
"texture": ExtResource("4_w5cv4")
}],
"loop": true,
"name": &"thanks",
"speed": 2.0
}]

[node name="Shoppe" type="Node2D"]
scale = Vector2(0.75, 0.75)
script = ExtResource("1_75yer")

[node name="BG" type="TextureRect" parent="."]
offset_right = 2020.0
offset_bottom = 2670.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_jvnhu")
expand_mode = 1

[node name="HideShopButton" type="TextureButton" parent="BG"]
visible = false
z_index = -1
layout_mode = 0
offset_left = -4875.0
offset_right = 1984.0
offset_bottom = 3477.0

[node name="ShopContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 503.0
offset_bottom = 667.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 45

[node name="TitleContents_VBox" type="VBoxContainer" parent="ShopContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LilShopKeep" type="AnimatedSprite2D" parent="ShopContainer/TitleContents_VBox"]
position = Vector2(317.167, 78)
scale = Vector2(1.80667, 1.75333)
sprite_frames = SubResource("SpriteFrames_dpoly")
animation = &"thanks"
autoplay = "default"
frame_progress = 0.0584167

[node name="DeskShop" type="TextureRect" parent="ShopContainer/TitleContents_VBox"]
layout_mode = 2
texture = ExtResource("6_15wo2")

[node name="ItemSelected" type="Sprite2D" parent="ShopContainer/TitleContents_VBox"]
position = Vector2(127.833, 108.667)
scale = Vector2(0.48374, 0.48374)
texture = ExtResource("7_owwd7")

[node name="ContentsContainer" type="MarginContainer" parent="ShopContainer/TitleContents_VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="ShopContents_Vbox" type="VBoxContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Welcome to my shope...  Why not buy somethigg"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ItemsScrollContainer" type="ScrollContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentsContainer_Vbox" type="VBoxContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer"]
clip_children = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="Item1" type="HBoxContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item1"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Plant Pot"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item1"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "30gp"
vertical_alignment = 1

[node name="BuyItem1" type="Button" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item1"]
visible = false
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
text = "Buy!"

[node name="Item2" type="HBoxContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox"]
visible = false
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item2"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Example Item name is too long"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item2"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "10gp"
vertical_alignment = 1

[node name="Button" type="Button" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item2"]
custom_minimum_size = Vector2(125, 35)
layout_mode = 2
size_flags_vertical = 4
text = "Buy!"

[node name="DropDownMenu" type="Control" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox"]
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("8_gql4k")

[node name="Button" type="Button" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/Button"]
layout_mode = 0
offset_right = 371.0
offset_bottom = 50.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Label" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/Button/MarginContainer"]
layout_mode = 2
text = "Plant Pot"

[node name="Chevron" type="TextureRect" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/Button/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("9_517tx")

[node name="CollapseControl" type="Control" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu"]
clip_contents = true
anchors_preset = 0
offset_top = 50.0
offset_right = 388.0
offset_bottom = 179.0

[node name="ListContainer" type="MarginContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/CollapseControl"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 47.0
grow_horizontal = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15

[node name="HBoxContainer" type="HBoxContainer" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/CollapseControl/ListContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/CollapseControl/ListContainer/HBoxContainer"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 15
text = "Purchase another plant pot and grow your potential!"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/CollapseControl/ListContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 15
text = "30gp"

[node name="BuyItem1" type="Button" parent="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/CollapseControl/ListContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Buy!"

[connection signal="pressed" from="BG/HideShopButton" to="." method="_on_texture_button_pressed"]
[connection signal="animation_looped" from="ShopContainer/TitleContents_VBox/LilShopKeep" to="." method="_on_lil_shop_keep_animation_looped"]
[connection signal="pressed" from="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/Item1/BuyItem1" to="." method="_on_buy_item_1_pressed"]
[connection signal="toggled" from="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/Button" to="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu" method="_on_button_toggled"]
[connection signal="pressed" from="ShopContainer/TitleContents_VBox/ContentsContainer/ShopContents_Vbox/ItemsScrollContainer/ContentsContainer_Vbox/DropDownMenu/CollapseControl/ListContainer/HBoxContainer/BuyItem1" to="." method="_on_buy_item_1_pressed"]
